[workspace]
members = [
    "main",
    "mdds",
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
#opt-level = 3          # Optimize for max performance
#lto = true              # Enable Link-Time Optimization
#codegen-units = 1       # Compile as a single unit for better optimization
#panic = "abort"         # Remove stack unwinding code
#strip = true            # Strip symbols

[profile.size]
inherits = "release"
opt-level = "z"         # Optimize for size
